--- a/coverage.html
+++ b/coverage.html
@@ -118,6 +118,66 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#commandHandlers">src/apps/wsServer/dice/DiceModule.ts</a>
+            </td>
+            <td>variable</td>
+            <td>commandHandlers</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./classes/ChangeNumberOfDicesGameGateway.html">src/apps/wsServer/dice/gateways/change-mode-game/ChangeNumberOfDicesGameGateway.ts</a>
+            </td>
+            <td>class</td>
+            <td>ChangeNumberOfDicesGameGateway</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/6)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./classes/ChangeNumberOfDicesGatewayRequest.html">src/apps/wsServer/dice/gateways/change-mode-game/ChangeNumberOfDicesGatewayRequest.ts</a>
+            </td>
+            <td>class</td>
+            <td>ChangeNumberOfDicesGatewayRequest</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/4)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./classes/ThrowDicesGateway.html">src/apps/wsServer/dice/gateways/create-game/ThrowDicesGateway.ts</a>
+            </td>
+            <td>class</td>
+            <td>ThrowDicesGateway</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/6)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./classes/ThrowDicesGatewayRequest.html">src/apps/wsServer/dice/gateways/create-game/ThrowDicesGatewayRequest.ts</a>
+            </td>
+            <td>class</td>
+            <td>ThrowDicesGatewayRequest</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./miscellaneous/variables.html#commandHandlers">src/apps/wsServer/game/GameModule.ts</a>
             </td>
             <td>variable</td>
@@ -149,6 +209,30 @@
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
                 <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./classes/ChangeModeGameGateway.html">src/apps/wsServer/game/gateways/change-mode-game/ChangeModeGameGateway.ts</a>
+            </td>
+            <td>class</td>
+            <td>ChangeModeGameGateway</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/6)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./classes/ChangeModeGameGatewayRequest.html">src/apps/wsServer/game/gateways/change-mode-game/ChangeModeGameGatewayRequest.ts</a>
+            </td>
+            <td>class</td>
+            <td>ChangeModeGameGatewayRequest</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/4)</span>
             </td>
         </tr>
         <tr class="low">
@@ -202,7 +286,79 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
-                <a href="./classes/Board.html">src/contexts/board/Board.ts</a>
+                <a href="./miscellaneous/variables.html#commandHandlers">src/apps/wsServer/player/PlayerModule.ts</a>
+            </td>
+            <td>variable</td>
+            <td>commandHandlers</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./classes/ChangeColorPlayerGateway.html">src/apps/wsServer/player/gateways/change-color-player/ChangeColorPlayerGateway.ts</a>
+            </td>
+            <td>class</td>
+            <td>ChangeColorPlayerGateway</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/6)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./classes/ChangeColorPlayerGatewayRequest.html">src/apps/wsServer/player/gateways/change-color-player/ChangeColorPlayerGatewayRequest.ts</a>
+            </td>
+            <td>class</td>
+            <td>ChangeColorPlayerGatewayRequest</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/4)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./classes/PlayerLeaveGateway.html">src/apps/wsServer/player/gateways/player-leave/PlayerLeaveGateway.ts</a>
+            </td>
+            <td>class</td>
+            <td>PlayerLeaveGateway</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/5)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./classes/PlayerRejoinGateway.html">src/apps/wsServer/player/gateways/player-rejoin/PlayerRejoinGateway.ts</a>
+            </td>
+            <td>class</td>
+            <td>PlayerRejoinGateway</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/6)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./classes/PlayerRejoinGatewayRequest.html">src/apps/wsServer/player/gateways/player-rejoin/PlayerRejoinGatewayRequest.ts</a>
+            </td>
+            <td>class</td>
+            <td>PlayerRejoinGatewayRequest</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/2)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./classes/Board.html">src/contexts/board/domain/Board.ts</a>
             </td>
             <td>class</td>
             <td>Board</td>
@@ -214,7 +370,7 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
-                <a href="./interfaces/BoardDto.html">src/contexts/board/BoardDto.ts</a>
+                <a href="./interfaces/BoardDto.html">src/contexts/board/domain/BoardDto.ts</a>
             </td>
             <td>interface</td>
             <td>BoardDto</td>
@@ -262,6 +418,30 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./classes/ChangeNumberOfDicesCommand.html">src/contexts/dice/application/change-dice-number/ChangeNumberOfDicesCommand.ts</a>
+            </td>
+            <td>class</td>
+            <td>ChangeNumberOfDicesCommand</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/6)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./classes/ThrowDicesCommand.html">src/contexts/dice/application/throw-dices/ThrowDicesCommand.ts</a>
+            </td>
+            <td>class</td>
+            <td>ThrowDicesCommand</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/5)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./classes/Dice.html">src/contexts/dice/domain/Dice.ts</a>
             </td>
             <td>class</td>
@@ -286,6 +466,30 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./classes/ChangeColorPlayerCommand.html">src/contexts/game/application/change-color-player/ChangeColorPlayerCommand.ts</a>
+            </td>
+            <td>class</td>
+            <td>ChangeColorPlayerCommand</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/6)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./classes/ChangeModeGameCommand.html">src/contexts/game/application/change-mode-game/ChangeModeGameCommand.ts</a>
+            </td>
+            <td>class</td>
+            <td>ChangeModeGameCommand</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/6)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./classes/CreateGameApp.html">src/contexts/game/application/create/CreateGameApp.ts</a>
             </td>
             <td>class</td>
@@ -298,10 +502,10 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
-                <a href="./classes/CreateGameCommand.html">src/contexts/game/application/create/CreateGameCommand.ts</a>
+                <a href="./classes/CreateGameCommandHandler.html">src/contexts/game/application/create/CreateGameCommandHandler.ts</a>
             </td>
             <td>class</td>
-            <td>CreateGameCommand</td>
+            <td>CreateGameCommandHandler</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
                 <span class="coverage-count">(0/4)</span>
@@ -310,10 +514,10 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
-                <a href="./classes/CreateGameCommandHandler.html">src/contexts/game/application/create/CreateGameCommandHandler.ts</a>
+                <a href="./classes/ThrowDicesGateway.html">src/contexts/game/application/create/ThrowDicesGateway.ts</a>
             </td>
             <td>class</td>
-            <td>CreateGameCommandHandler</td>
+            <td>ThrowDicesGateway</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
                 <span class="coverage-count">(0/4)</span>
@@ -364,7 +568,7 @@
             <td>Game</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/13)</span>
+                <span class="coverage-count">(0/15)</span>
             </td>
         </tr>
         <tr class="low">
@@ -376,7 +580,7 @@
             <td>GameDto</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/9)</span>
+                <span class="coverage-count">(0/11)</span>
             </td>
         </tr>
         <tr class="low">
@@ -400,7 +604,7 @@
             <td>GameMessagesDataConfig</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/3)</span>
+                <span class="coverage-count">(0/4)</span>
             </td>
         </tr>
         <tr class="low">
@@ -410,6 +614,18 @@
             </td>
             <td>class</td>
             <td>GameStatus</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/5)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./classes/GameType.html">src/contexts/game/domain/GameType.ts</a>
+            </td>
+            <td>class</td>
+            <td>GameType</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
                 <span class="coverage-count">(0/5)</span>
@@ -490,6 +706,54 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./classes/PlayerLeaveApp.html">src/contexts/players/application/player-leave/PlayerLeaveApp.ts</a>
+            </td>
+            <td>class</td>
+            <td>PlayerLeaveApp</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/4)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./classes/PlayerLeaveCommand.html">src/contexts/players/application/player-leave/PlayerLeaveCommand.ts</a>
+            </td>
+            <td>class</td>
+            <td>PlayerLeaveCommand</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./classes/PlayerLeaveCommandHandler.html">src/contexts/players/application/player-leave/PlayerLeaveCommandHandler.ts</a>
+            </td>
+            <td>class</td>
+            <td>PlayerLeaveCommandHandler</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/4)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./classes/PlayerRejoinCommand.html">src/contexts/players/application/player-rejoin/PlayerRejoinCommand.ts</a>
+            </td>
+            <td>class</td>
+            <td>PlayerRejoinCommand</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/4)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./classes/ClientId.html">src/contexts/players/domain/ClientId.ts</a>
             </td>
             <td>class</td>
@@ -508,7 +772,7 @@
             <td>Player</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/15)</span>
+                <span class="coverage-count">(0/16)</span>
             </td>
         </tr>
         <tr class="low">
