--- a/interfaces/BoardDto.html
+++ b/interfaces/BoardDto.html
@@ -71,7 +71,7 @@
             <h3>File</h3>
         </p>
         <p class="comment">
-            <code>src/contexts/board/BoardDto.ts</code>
+            <code>src/contexts/board/domain/BoardDto.ts</code>
         </p>
 
 
@@ -300,9 +300,9 @@
 
 
     <div class="tab-pane fade  tab-source-code" id="source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { SkyDto } from &#x27;../sky/domain/SkyDto&#x27;;
-import { BoxDto } from &#x27;../box/domain/BoxDto&#x27;;
-import { JailDto } from &#x27;../jail/domain/JailDto&#x27;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { SkyDto } from &#x27;../../sky/domain/SkyDto&#x27;;
+import { BoxDto } from &#x27;../../box/domain/BoxDto&#x27;;
+import { JailDto } from &#x27;../../jail/domain/JailDto&#x27;;
 
 export interface BoardDto {
   gameId: string;
