--- a/miscellaneous/enumerations.html
+++ b/miscellaneous/enumerations.html
@@ -73,6 +73,9 @@
                             <a href="#GameStatusConstants" title="src/contexts/game/domain/GameStatusConstants.ts" ><b>GameStatusConstants</b>&nbsp;&nbsp;&nbsp;(src/.../GameStatusConstants.ts)</a>
                         </li>
                         <li>
+                            <a href="#GameTypesConstants" title="src/contexts/game/domain/GameTypesConstants.ts" ><b>GameTypesConstants</b>&nbsp;&nbsp;&nbsp;(src/.../GameTypesConstants.ts)</a>
+                        </li>
+                        <li>
                             <a href="#LocateTypeConstants" title="src/contexts/locate/domain/LocateTypeConstants.ts" ><b>LocateTypeConstants</b>&nbsp;&nbsp;&nbsp;(src/.../LocateTypeConstants.ts)</a>
                         </li>
                         <li>
@@ -284,6 +287,16 @@
                                 <i>Value : </i><code>USER_JOINED</code>
                             </td>
                         </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                &nbsp;USER_LEAVE
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                <i>Value : </i><code>USER_LEAVE</code>
+                            </td>
+                        </tr>
             </tbody>
         </table>
 </section>
@@ -325,6 +338,39 @@
                         <tr>
                             <td class="col-md-4">
                                 <i>Value : </i><code>Terminado</code>
+                            </td>
+                        </tr>
+            </tbody>
+        </table>
+</section>
+    <h3>src/contexts/game/domain/GameTypesConstants.ts</h3>
+    <section data-compodoc="block-enums">
+        <table class="table table-sm table-bordered">
+            <tbody>
+                <tr>
+                    <td class="col-md-4">
+                        <a name="GameTypesConstants"></a>
+                        <span class="name "><b>GameTypesConstants</b><a href="#GameTypesConstants"><span class="icon ion-ios-link"></span></a></span>
+                    </td>
+                </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                &nbsp;STANDARD
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                <i>Value : </i><code>Estandar</code>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                &nbsp;BATTLE
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                <i>Value : </i><code>Batalla</code>
                             </td>
                         </tr>
             </tbody>
