--- a/interfaces/GameDto.html
+++ b/interfaces/GameDto.html
@@ -90,6 +90,12 @@
                         <td class="col-md-4">
                             <ul class="index-list">
                                 <li>
+                                        <a href="#availableColors" 
+>
+                                            availableColors
+                                        </a>
+                                </li>
+                                <li>
                                         <a href="#board" 
 >
                                             board
@@ -108,6 +114,12 @@
                                         </a>
                                 </li>
                                 <li>
+                                        <a href="#numberOfDices" 
+>
+                                            numberOfDices
+                                        </a>
+                                </li>
+                                <li>
                                         <a href="#numberOfTabs" 
 >
                                             numberOfTabs
@@ -120,15 +132,15 @@
                                         </a>
                                 </li>
                                 <li>
-                                        <a href="#selectedColors" 
->
-                                            selectedColors
-                                        </a>
-                                </li>
-                                <li>
                                         <a href="#status" 
 >
                                             status
+                                        </a>
+                                </li>
+                                <li>
+                                        <a href="#type" 
+>
+                                            type
                                         </a>
                                 </li>
                                 <li>
@@ -148,6 +160,39 @@
 
             <section data-compodoc="block-properties">
                 <h3 id="inputs">Properties</h3>
+                    <table class="table table-sm table-bordered">
+                        <tbody>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <a name="availableColors"></a>
+                                        <span class="name "><b>availableColors</b>
+                                            <a href="#availableColors">
+                                                <span class="icon ion-ios-link"></span>
+                                            </a>
+                                        </span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <code>availableColors:         <code><a href="../classes/Color.html" target="_self" >Array&lt;ColorConstants&gt;</a></code>
+</code>
+                                    </td>
+                                </tr>
+
+
+                                    <tr>
+                                        <td class="col-md-4">
+                                            <i>Type : </i>        <code><a href="../classes/Color.html" target="_self" >Array&lt;ColorConstants&gt;</a></code>
+
+                                        </td>
+                                    </tr>
+
+
+
+
+
+                        </tbody>
+                    </table>
                     <table class="table table-sm table-bordered">
                         <tbody>
                                 <tr>
@@ -251,6 +296,39 @@
                         <tbody>
                                 <tr>
                                     <td class="col-md-4">
+                                        <a name="numberOfDices"></a>
+                                        <span class="name "><b>numberOfDices</b>
+                                            <a href="#numberOfDices">
+                                                <span class="icon ion-ios-link"></span>
+                                            </a>
+                                        </span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <code>numberOfDices:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank" >number</a></code>
+</code>
+                                    </td>
+                                </tr>
+
+
+                                    <tr>
+                                        <td class="col-md-4">
+                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank" >number</a></code>
+
+                                        </td>
+                                    </tr>
+
+
+
+
+
+                        </tbody>
+                    </table>
+                    <table class="table table-sm table-bordered">
+                        <tbody>
+                                <tr>
+                                    <td class="col-md-4">
                                         <a name="numberOfTabs"></a>
                                         <span class="name "><b>numberOfTabs</b>
                                             <a href="#numberOfTabs">
@@ -317,39 +395,6 @@
                         <tbody>
                                 <tr>
                                     <td class="col-md-4">
-                                        <a name="selectedColors"></a>
-                                        <span class="name "><b>selectedColors</b>
-                                            <a href="#selectedColors">
-                                                <span class="icon ion-ios-link"></span>
-                                            </a>
-                                        </span>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="col-md-4">
-                                        <code>selectedColors:         <code><a href="../classes/Color.html" target="_self" >Array&lt;ColorConstants&gt;</a></code>
-</code>
-                                    </td>
-                                </tr>
-
-
-                                    <tr>
-                                        <td class="col-md-4">
-                                            <i>Type : </i>        <code><a href="../classes/Color.html" target="_self" >Array&lt;ColorConstants&gt;</a></code>
-
-                                        </td>
-                                    </tr>
-
-
-
-
-
-                        </tbody>
-                    </table>
-                    <table class="table table-sm table-bordered">
-                        <tbody>
-                                <tr>
-                                    <td class="col-md-4">
                                         <a name="status"></a>
                                         <span class="name "><b>status</b>
                                             <a href="#status">
@@ -369,6 +414,39 @@
                                     <tr>
                                         <td class="col-md-4">
                                             <i>Type : </i>        <code><a href="../miscellaneous/enumerations.html#GameStatusConstants" target="_self" >GameStatusConstants</a></code>
+
+                                        </td>
+                                    </tr>
+
+
+
+
+
+                        </tbody>
+                    </table>
+                    <table class="table table-sm table-bordered">
+                        <tbody>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <a name="type"></a>
+                                        <span class="name "><b>type</b>
+                                            <a href="#type">
+                                                <span class="icon ion-ios-link"></span>
+                                            </a>
+                                        </span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <code>type:         <code><a href="../miscellaneous/enumerations.html#GameTypesConstants" target="_self" >GameTypesConstants</a></code>
+</code>
+                                    </td>
+                                </tr>
+
+
+                                    <tr>
+                                        <td class="col-md-4">
+                                            <i>Type : </i>        <code><a href="../miscellaneous/enumerations.html#GameTypesConstants" target="_self" >GameTypesConstants</a></code>
 
                                         </td>
                                     </tr>
@@ -421,16 +499,19 @@
 import { ColorConstants } from &#x27;../../shared/domain/ColorConstants&#x27;;
 import { GameStatusConstants } from &#x27;./GameStatusConstants&#x27;;
 import { DiceDto } from &#x27;../../dice/domain/DiceDto&#x27;;
-import { BoardDto } from &#x27;../../board/BoardDto&#x27;;
+import { BoardDto } from &#x27;../../board/domain/BoardDto&#x27;;
+import { GameTypesConstants } from &#x27;./GameTypesConstants&#x27;;
 
 export interface GameDto {
   gameId: string;
   players: Array&lt;PlayerDto&gt;;
-  selectedColors: Array&lt;ColorConstants&gt;;
+  availableColors: Array&lt;ColorConstants&gt;;
   dices: Array&lt;DiceDto&gt;;
   winners: Array&lt;PlayerDto&gt;;
   status: GameStatusConstants;
   numberOfTabs: number;
+  numberOfDices: number;
+  type: GameTypesConstants;
   board: BoardDto;
 }
 </code></pre>
