--- a/miscellaneous/variables.html
+++ b/miscellaneous/variables.html
@@ -61,7 +61,13 @@
                 <td class="col-md-4">
                     <ul class="index-list">
                         <li>
+                            <a href="#commandHandlers" title="src/apps/wsServer/dice/DiceModule.ts" ><b>commandHandlers</b>&nbsp;&nbsp;&nbsp;(src/.../DiceModule.ts)</a>
+                        </li>
+                        <li>
                             <a href="#commandHandlers" title="src/apps/wsServer/game/GameModule.ts" ><b>commandHandlers</b>&nbsp;&nbsp;&nbsp;(src/.../GameModule.ts)</a>
+                        </li>
+                        <li>
+                            <a href="#commandHandlers" title="src/apps/wsServer/player/PlayerModule.ts" ><b>commandHandlers</b>&nbsp;&nbsp;&nbsp;(src/.../PlayerModule.ts)</a>
                         </li>
                         <li>
                             <a href="#CreateGameAppProvider" title="src/apps/wsServer/game/config/Providers.ts" ><b>CreateGameAppProvider</b>&nbsp;&nbsp;&nbsp;(src/.../Providers.ts)</a>
@@ -91,6 +97,35 @@
     </table>
 </section>
 
+    <h3>src/apps/wsServer/dice/DiceModule.ts</h3>
+    <section data-compodoc="block-properties">
+    <h3></h3>    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="commandHandlers"></a>
+                    <span class="name">
+                        <span ><b>commandHandlers</b></span>
+                        <a href="#commandHandlers"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Type : </i>    <code>[]</code>
+
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Default value : </i><code>[]</code>
+                    </td>
+                </tr>
+
+
+        </tbody>
+    </table>
+</section>
     <h3>src/apps/wsServer/game/GameModule.ts</h3>
     <section data-compodoc="block-properties">
     <h3></h3>    <table class="table table-sm table-bordered">
@@ -113,6 +148,35 @@
                 <tr>
                     <td class="col-md-4">
                         <i>Default value : </i><code>[CreateGameCommandHandler, JoinGameCommandHandler]</code>
+                    </td>
+                </tr>
+
+
+        </tbody>
+    </table>
+</section>
+    <h3>src/apps/wsServer/player/PlayerModule.ts</h3>
+    <section data-compodoc="block-properties">
+    <h3></h3>    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="commandHandlers"></a>
+                    <span class="name">
+                        <span ><b>commandHandlers</b></span>
+                        <a href="#commandHandlers"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Type : </i>    <code>[]</code>
+
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Default value : </i><code>[]</code>
                     </td>
                 </tr>
 
