--- a/modules/PlayerModule.html
+++ b/modules/PlayerModule.html
@@ -35,7 +35,7 @@
 
 <ol class="breadcrumb">
     <li class="breadcrumb-item">Modules</li>
-    <li class="breadcrumb-item" >AppModule</li>
+    <li class="breadcrumb-item" >PlayerModule</li>
 </ol>
 
 <div class="text-center module-graph-container">
@@ -63,66 +63,30 @@
 <polygon fill="#fb8072" stroke="transparent" points="406,-10 406,-30 426,-30 426,-10 406,-10"/>
 <text text-anchor="start" x="429.73" y="-15.4" font-family="Times-12" font-size="14.00"> &#160;Exports</text>
 <g id="clust1" class="cluster">
-<title>cluster_AppModule</title>
-<polygon fill="none" stroke="black" stroke-dasharray="1,5" points="29,-70 29,-195 467,-195 467,-70 29,-70"/>
+<title>cluster_PlayerModule</title>
+<polygon fill="none" stroke="black" stroke-dasharray="1,5" points="192,-70 192,-195 304,-195 304,-70 192,-70"/>
 </g>
 <g id="clust3" class="cluster">
-<title>cluster_AppModule_imports</title>
-<polygon fill="none" stroke="black" points="37,-78 37,-130 459,-130 459,-78 37,-78"/>
-</g>
-<!-- DiceModule -->
-<g id="node1" class="node">
-<title>DiceModule</title>
-<polygon fill="#8dd3c7" stroke="black" points="450.98,-122 447.98,-126 426.98,-126 423.98,-122 365.02,-122 365.02,-86 450.98,-86 450.98,-122"/>
-<text text-anchor="middle" x="408" y="-99.8" font-family="Times,serif" font-size="14.00">DiceModule</text>
-</g>
-<!-- AppModule -->
-<g id="node5" class="node">
-<title>AppModule</title>
-<polygon fill="#8dd3c7" stroke="black" points="286.66,-187 283.66,-191 262.66,-191 259.66,-187 203.34,-187 203.34,-151 286.66,-151 286.66,-187"/>
-<text text-anchor="middle" x="245" y="-164.8" font-family="Times,serif" font-size="14.00">AppModule</text>
-</g>
-<!-- DiceModule&#45;&gt;AppModule -->
-<g id="edge1" class="edge">
-<title>DiceModule&#45;&gt;AppModule</title>
-<path fill="none" stroke="black" d="M408,-122.11C408,-141.34 408,-169 408,-169 408,-169 296.98,-169 296.98,-169"/>
-<polygon fill="black" stroke="black" points="296.98,-165.5 286.98,-169 296.98,-172.5 296.98,-165.5"/>
-</g>
-<!-- GameModule -->
-<g id="node2" class="node">
-<title>GameModule</title>
-<polygon fill="#8dd3c7" stroke="black" points="347.48,-122 344.48,-126 323.48,-126 320.48,-122 254.52,-122 254.52,-86 347.48,-86 347.48,-122"/>
-<text text-anchor="middle" x="301" y="-99.8" font-family="Times,serif" font-size="14.00">GameModule</text>
-</g>
-<!-- GameModule&#45;&gt;AppModule -->
-<g id="edge2" class="edge">
-<title>GameModule&#45;&gt;AppModule</title>
-<path fill="none" stroke="black" d="M270.67,-122.11C270.67,-122.11 270.67,-140.99 270.67,-140.99"/>
-<polygon fill="black" stroke="black" points="267.17,-140.99 270.67,-150.99 274.17,-140.99 267.17,-140.99"/>
-</g>
-<!-- PlayerModule -->
-<g id="node3" class="node">
-<title>PlayerModule</title>
-<polygon fill="#8dd3c7" stroke="black" points="236.81,-122 233.81,-126 212.81,-126 209.81,-122 141.19,-122 141.19,-86 236.81,-86 236.81,-122"/>
-<text text-anchor="middle" x="189" y="-99.8" font-family="Times,serif" font-size="14.00">PlayerModule</text>
-</g>
-<!-- PlayerModule&#45;&gt;AppModule -->
-<g id="edge3" class="edge">
-<title>PlayerModule&#45;&gt;AppModule</title>
-<path fill="none" stroke="black" d="M219.91,-122.11C219.91,-122.11 219.91,-140.99 219.91,-140.99"/>
-<polygon fill="black" stroke="black" points="216.41,-140.99 219.91,-150.99 223.41,-140.99 216.41,-140.99"/>
+<title>cluster_PlayerModule_imports</title>
+<polygon fill="none" stroke="black" points="201,-78 201,-130 295,-130 295,-78 201,-78"/>
 </g>
 <!-- WsModule -->
-<g id="node4" class="node">
+<g id="node1" class="node">
 <title>WsModule</title>
-<polygon fill="#8dd3c7" stroke="black" points="123.21,-122 120.21,-126 99.21,-126 96.21,-122 44.79,-122 44.79,-86 123.21,-86 123.21,-122"/>
-<text text-anchor="middle" x="84" y="-99.8" font-family="Times,serif" font-size="14.00">WsModule</text>
+<polygon fill="#8dd3c7" stroke="black" points="287.21,-122 284.21,-126 263.21,-126 260.21,-122 208.79,-122 208.79,-86 287.21,-86 287.21,-122"/>
+<text text-anchor="middle" x="248" y="-99.8" font-family="Times,serif" font-size="14.00">WsModule</text>
 </g>
-<!-- WsModule&#45;&gt;AppModule -->
-<g id="edge4" class="edge">
-<title>WsModule&#45;&gt;AppModule</title>
-<path fill="none" stroke="black" d="M84,-122.11C84,-141.34 84,-169 84,-169 84,-169 193.12,-169 193.12,-169"/>
-<polygon fill="black" stroke="black" points="193.12,-172.5 203.12,-169 193.12,-165.5 193.12,-172.5"/>
+<!-- PlayerModule -->
+<g id="node2" class="node">
+<title>PlayerModule</title>
+<polygon fill="#8dd3c7" stroke="black" points="295.81,-187 292.81,-191 271.81,-191 268.81,-187 200.19,-187 200.19,-151 295.81,-151 295.81,-187"/>
+<text text-anchor="middle" x="248" y="-164.8" font-family="Times,serif" font-size="14.00">PlayerModule</text>
+</g>
+<!-- WsModule&#45;&gt;PlayerModule -->
+<g id="edge1" class="edge">
+<title>WsModule&#45;&gt;PlayerModule</title>
+<path fill="none" stroke="black" d="M248,-122.11C248,-122.11 248,-140.99 248,-140.99"/>
+<polygon fill="black" stroke="black" points="244.5,-140.99 248,-150.99 251.5,-140.99 244.5,-140.99"/>
 </g>
 </g>
 </svg>
@@ -160,7 +124,7 @@
             <h3>File</h3>
         </p>
         <p class="comment">
-            <code>src/AppModule.ts</code>
+            <code>src/apps/wsServer/player/PlayerModule.ts</code>
         </p>
 
 
@@ -175,15 +139,6 @@
                                 class="icon ion-ios-information-circle-outline"></a></h3>
                     <ul class="list-group">
                         <li class="list-group-item">
-                            <a href="../modules/DiceModule.html">DiceModule</a>
-                        </li>
-                        <li class="list-group-item">
-                            <a href="../modules/GameModule.html">GameModule</a>
-                        </li>
-                        <li class="list-group-item">
-                            <a href="../modules/PlayerModule.html">PlayerModule</a>
-                        </li>
-                        <li class="list-group-item">
                             <a href="../modules/WsModule.html">WsModule</a>
                         </li>
                     </ul>
@@ -197,28 +152,19 @@
 
     <div class="tab-pane fade  tab-source-code" id="source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Module } from &#x27;@nestjs/common&#x27;;
-import { ConfigModule } from &#x27;@nestjs/config&#x27;;
-import { WsModule } from &#x27;./contexts/shared/infrastructure/gateways/WsModule&#x27;;
-import { GameModule } from &#x27;./apps/wsServer/game/GameModule&#x27;;
+import { WsModule } from &#x27;../../../contexts/shared/infrastructure/gateways/WsModule&#x27;;
 import { CqrsModule } from &#x27;@nestjs/cqrs&#x27;;
-import { PlayerModule } from &#x27;./apps/wsServer/player/PlayerModule&#x27;;
-import { DiceModule } from &#x27;./apps/wsServer/dice/DiceModule&#x27;;
+import { PlayerLeaveGateway } from &#x27;./gateways/player-leave/PlayerLeaveGateway&#x27;;
+import { PlayerRejoinGateway } from &#x27;./gateways/player-rejoin/PlayerRejoinGateway&#x27;;
+
+const commandHandlers &#x3D; [];
 
 @Module({
-  imports: [
-    ConfigModule.forRoot({
-      isGlobal: true,
-    }),
-    CqrsModule,
-    WsModule,
-    GameModule,
-    PlayerModule,
-    DiceModule,
-  ],
-  controllers: [],
-  providers: [],
+  imports: [WsModule, CqrsModule],
+  providers: [...commandHandlers, PlayerLeaveGateway, PlayerRejoinGateway],
+  exports: [],
 })
-export class AppModule {}
+export class PlayerModule {}
 </code></pre>
     </div>
 </div>
@@ -265,7 +211,7 @@ export class AppModule {}
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'module';
-            var COMPODOC_CURRENT_PAGE_URL = 'AppModule.html';
+            var COMPODOC_CURRENT_PAGE_URL = 'PlayerModule.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
